--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
         <div class="proBeyond">Pro. Beyond.</div>
         <div class="learnBuyList">
             <ul>
-                <li>Learn more <i class="fa-solid fa-chevron-right"></i></li>
+                <li><a href="https://www.apple.com/">Learn more</a> <i class="fa-solid fa-chevron-right"></i></li>
                 <li>buy <i class="fa-solid fa-chevron-right"></i></li>
             </ul>
         </div>
         <picture>
-            <source srcset="./images/smallimage.jpg"
+            <source srcset="smallimage.jpg"
             media="(max-width:995px)">
-            <source srcset="images/mediumLargeImage.jpg"
+            <source srcset="mediumLargeImage.jpg"
             media="(max-width:784px)">
-            <img src="./images/largeimage.jpg">
+            <img src="largeimage.jpg">
         </picture>
     </div>
     <div class="iphone14pro another_iphone14pro">
@@ -63,18 +63,18 @@
             </ul>
         </div>
         <picture>
-            <source srcset="./images/white_smallImage.jpg"
+            <source srcset="white_smallImage.jpg"
                     media="(max-width:995px)">
-            <source srcset="images/white_mediumImage.jpg"
+            <source srcset="white_mediumImage.jpg"
                     media="(max-width:784px)">
-            <img src="./images/white_largeImage.jpg">
+            <img src="white_largeImage.jpg">
         </picture>
     </div>
     <div class="watch8_div">
         <picture>
-            <source srcset="images/watchlogomediumImage.png"
+            <source srcset="watchlogomediumImage.png"
                     media="(max-width:784px)">
-            <img src="./images/applewatchImageLarge.png">
+            <img src="applewatchImageLarge.png">
         </picture>
         <div class="a_healthy">A healthy leap ahead.</div>
         <div class="learnBuyList">
@@ -84,9 +84,9 @@
             </ul>
         </div>
         <picture>
-            <source srcset="images/watch8mediumImage.jpg"
+            <source srcset="watch8mediumImage.jpg"
                     media="(max-width:784px)">
-            <img src="./images/watch8LargeImage.jpg">
+            <img src="watch8LargeImage.jpg">
         </picture>
     </div>
     <div class="flex_div">
@@ -105,18 +105,18 @@
                 </ul>
             </div>
             <picture>
-                <source srcset="./images/fourthLargeImage.jpg"
+                <source srcset="fourthLargeImage.jpg"
                         media="(max-width:995px)">
 
-                <img src="./images/fourthmediumImage.jpg">
+                <img src="fourthmediumImage.jpg">
             </picture>
         </div>
         <div class="main2">
             <picture>
-                <source srcset="./images/wwdc_mediumImage.jpg"
+                <source srcset="wwdc_mediumImage.jpg"
                         media="(max-width:995px)">
 
-                <img src="./images/wwdc_largeImage.jpg">
+                <img src="wwdc_largeImage.jpg">
             </picture>
             <div class="tradein">
                 <i class="fa-brands fa-apple"></i>
@@ -128,6 +128,7 @@
             <div class="learnBuyList">
                 <ul>
                     <li>Learn more <i class="fa-solid fa-chevron-right"></i></li>
+                    
 
                 </ul>
             </div>
@@ -139,10 +140,10 @@
     <div class="flex_div">
         <div class="main1">
             <picture>
-                <source srcset="./images/ipad_smallImage.jpg"
+                <source srcset="ipad_smallImage.jpg"
                         media="(max-width:995px)">
 
-                <img src="./images/ipad_largeImage.jpg">
+                <img src="ipad_largeImage.jpg">
             </picture>
             <div class="tradein">
                 iPad
@@ -171,10 +172,10 @@
                 </ul>
             </div>
             <picture>
-                <source srcset="./images/macbook_smallImage.jpg"
+                <source srcset="macbook_smallImage.jpg"
                         media="(max-width:995px)">
 
-                <img src="./images/macbook_largeImage.jpg">
+                <img src="macbook_largeImage.jpg">
             </picture>
 
 
