Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </ul>
         </div>
         <picture>
-            <source srcset="smallimage.jpg"
+            <source srcset="./smallimage.jpg"
             media="(max-width:995px)">
             <source srcset="mediumLargeImage.jpg"
             media="(max-width:784px)">
@@ -247,4 +247,5 @@
 
     <script src="https://kit.fontawesome.com/d14c809350.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
